# weatherlink-live-local-python

./: CHANGELOG.md  LICENSE.txt  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml  publish.yml
docs/: conf.py  index.rst
docs/_templates/autosummary/: class.rst  module.rst
examples/: basic.py
src/weatherlink_live_local/: __init__.py  _discovery.py  conditions.py  discovery.py  units.py
tests/: test_conversion.py  test_http.py  test_main.py
